resolved the bg bug on small devices

--- a/front-end/src/components/shared/Header/Header.module.css
+++ b/front-end/src/components/shared/Header/Header.module.css
@@ -126,7 +126,7 @@
 
   .menu {
     position: fixed;
-    height: 100%;
+    height: 100vh;
     width: 320px;
     left: -100%;
     top: 0;
